# fastapi-rabbitmq

./: README.md  pyproject.toml
consumer/: main.py
publisher/: main.py
